[package]
name = "bingmaps"
version = "0.4.0-dev"
description = "API bindings for the Bing Maps v1 HTTP API"
authors = ["Kevin Stenerson <kevin@rapiditynetworks.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rapiditynetworks/bingmaps-rs"
documentation = "https://docs.rs/bingmaps-rs"
keywords = ["bing", "maps", "microsoft", "geocoding", "api"]
categories = ["api-bindings"]

[lib]
name = "bingmaps"

[dependencies]
hyper = "^0.11"
hyper-openssl = "^0.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_qs = "^0.2"
